Theme updated: correct a z-index bug on main menu with contextual links.

--- a/profiles/rouergue/themes/custom/rouergue_bootstrap/css/custom.css
+++ b/profiles/rouergue/themes/custom/rouergue_bootstrap/css/custom.css
@@ -211,6 +211,10 @@ MAIN MENU
   margin-left: 30px;
 }
 
+.menu.navbar-nav li > a {
+z-index: 1000;
+}
+
 .menu.navbar-nav .active, .menu.navbar-nav li > a:hover , .menu.navbar-nav li > a:focus{
   background-color: #ffffff;
   border-radius: 10px;
